--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A tool for sharing info from news pages as images",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,10 @@
   },
   "homepage": "https://github.com/carmona/imagefy#readme",
   "dependencies": {
-    "phantom-render-stream": "^2.2.0"
+    "axios": "^1.2.1",
+    "canvas": "^2.10.2",
+    "express": "^4.18.2",
+    "metadata-scraper": "^0.2.61",
+    "sharp": "^0.31.2"
   }
 }
