--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -35,9 +35,11 @@ jobs:
       id: target_branches
       run: |
         CHANGED_FILES="${{ steps.files.outputs.changed_files }}"
+        echo "Changed files: $CHANGED_FILES"
         
         # Check for SEMVER pattern in the branch name (release/x.y.z)
         CURRENT_BRANCH="${GITHUB_REF#refs/heads/}"
+        echo "Current branch: $CURRENT_BRANCH"
         CURRENT_SEMVER="${CURRENT_BRANCH#release/}"
         
         # Determine target branches to merge into
@@ -49,6 +51,7 @@ jobs:
           fi
         done
         
+        echo "Target branches to merge into: $TARGET_BRANCHES"
         echo "::set-output name=target_branches::$TARGET_BRANCHES"
     
     - name: Merge changes
@@ -57,6 +60,7 @@ jobs:
         TARGET_BRANCHES="${{ steps.target_branches.outputs.target_branches }}"
         CURRENT_BRANCH="${GITHUB_REF#refs/heads/}"
         for branch in $TARGET_BRANCHES; do
+          echo "Merging changes into branch: $branch"
           git checkout -b temp-merge-branch "$branch"
           git merge --no-ff --no-edit "$CURRENT_BRANCH"
           git push origin "$branch"
