--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "imagefy",
-  "version": "0.1.1",
+  "version": "0.1.1-second-try",
   "description": "A tool for sharing info from news pages as images",
   "main": "index.js",
   "scripts": {
