--- a/package.json
+++ b/package.json
@@ -17,11 +17,5 @@
     "url": "https://github.com/carmona/imagefy/issues"
   },
   "homepage": "https://github.com/carmona/imagefy#readme",
-  "dependencies": {
-    "axios": "^1.2.1",
-    "canvas": "^2.10.2",
-    "express": "^4.18.2",
-    "metadata-scraper": "^0.2.61",
-    "sharp": "^0.31.2"
-  }
+  "dependencies": {}
 }
